--- a/HandWash/index.html
+++ b/HandWash/index.html
@@ -20,7 +20,7 @@
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
-        <div class="title">test</div>
+        <div class="title">Hand Wash</div>
       </div>
     </div>
   </body>
