--- a/HandWash/index_edit.html
+++ b/HandWash/index_edit.html
@@ -12,11 +12,11 @@
     <script src="https://unpkg.com/ml5@0.4.2/dist/ml5.min.js"></script>
     <script src="TemplateData/UnityProgress.js"></script>
     <script src="Build/UnityLoader.js"></script>
-    <script src="mlController.js"></script>
+    <script src="mlMultiController.js"></script>
   </head>
   <body>
     <div class="webgl-content">
-      <div id="unityContainer" style="width: 960px; height: 600px"></div>
+      <div id="unityContainer" style="width: 1920px; height: 1080px"></div>
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
